chore(spacing): fix spacing issues
fixed spacing issues

--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -3,7 +3,8 @@
 
 hr {
     width: 35%;
-    border-width: 0.1px;
+    border-width: 0.5px;
+    margin: 15px 0;
 }
 
 .rp-container {
@@ -49,7 +50,7 @@ hr {
     font-family: 'Roboto Mono', sans-serif;
     font-weight: 700;
     letter-spacing: 2px;
-    margin-bottom: 10px;
+    text-align: center;
 }
 
 .rp-my-title {
